--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -94,5 +94,9 @@ footer select{
     border: none;
     outline: none;
     appearance: none;
-    
+
+}
+
+.footer-bottom-right{
+    display: flex;
 }
