--- a/src/components/blockTwo/blockTwo.css
+++ b/src/components/blockTwo/blockTwo.css
@@ -4,7 +4,8 @@
 }
 
 .block-two{
-    width: 100%;
+    width: 850px;
+    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +13,7 @@
 
 
 .block-two h3{ 
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .block-two p{ 
