--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -2,6 +2,16 @@
     list-style: none;
     display: flex;
     gap: 40px;
+    background-color: rgba(255, 255, 255, 0.699);
+    position: sticky;
+    margin: 0;
+    padding: 20px 50px;
+    top: 0;
+    z-index: 2;
+}
+
+.main-controls li{
+    cursor: pointer;
 }
 
 .main-controls-active{
