--- a/src/components/blockEleven/blockEleven.css
+++ b/src/components/blockEleven/blockEleven.css
@@ -1,4 +1,4 @@
-.block-three{
+.block-eleven{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -6,24 +6,21 @@
     padding: 100px 0;
 }
 
-
-.block-three-img1{
-     width: 35%;
-    aspect-ratio: 1/1;
+.block-eleven-img1{
+    width: 40%;
 }
 
-.block-three-img2{
-     width: 30%;
-    aspect-ratio: 3/2;
+.block-eleven-img2{
+    width: 50%;
 }
 
-.block-three-background{
-    background-color: var(--yellow);
+
+.block-eleven-background{
+    background-color: var(--purple2);
     position: absolute;
     height: 100%;
     width: 60%;
     z-index: -1;
-    right: 0;
 }
 
 
