--- a/src/components/blockTwo/blockTwo.css
+++ b/src/components/blockTwo/blockTwo.css
@@ -3,13 +3,24 @@
     color: var(--blue);
 }
 
+
+
+
 .block-two{
-    width: 850px;
+    width: 825px;
     margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
+@media (max-width: 1024px) {
+    .block-two{
+        width: 600px;
+    }
+    
+}
+
 
 
 .block-two h3{ 
