--- a/src/components/blockEleven/blockEleven.css
+++ b/src/components/blockEleven/blockEleven.css
@@ -23,4 +23,20 @@
     z-index: -1;
 }
 
+@media (max-width: 600px) {
+  .block-eleven {
+    flex-direction: column !important;
+    align-items: center !important;
+    padding: 20px 0 !important;
+  }
+  .block-eleven-img1,
+  .block-eleven-img2 {
+    width: 100% !important;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+}
+
 
