--- a/src/components/blockNine/blockNine.css
+++ b/src/components/blockNine/blockNine.css
@@ -9,5 +9,19 @@
     width: 80%;
 }
 
+@media (max-width: 600px) {
+  .block-nine {
+    flex-direction: column !important;
+    align-items: center !important;
+  }
+  .block-nine-img1 {
+    width: 100% !important;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+}
+
 
 
