--- a/src/components/blockOne/blockOne.css
+++ b/src/components/blockOne/blockOne.css
@@ -15,4 +15,19 @@
     width: 70%;
 }
 
+@media (max-width: 600px) {
+  .block-one {
+    flex-direction: column !important;
+    align-items: center !important;
+    padding: 20px 0 !important;
+  }
+  .block-one img {
+    width: 100% !important;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+}
+
 
