--- a/src/components/blockThree/blockThree.css
+++ b/src/components/blockThree/blockThree.css
@@ -26,4 +26,20 @@
     right: 0;
 }
 
+@media (max-width: 600px) {
+  .block-three {
+    flex-direction: column !important;
+    align-items: center !important;
+    padding: 20px 0 !important;
+  }
+  .block-three-img1,
+  .block-three-img2 {
+    width: 100% !important;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+}
+
 
