--- a/src/components/blockThirteen/blockThirteen.css
+++ b/src/components/blockThirteen/blockThirteen.css
@@ -39,3 +39,22 @@
 .block-thirteen-link:hover {
   text-decoration: underline;
 }
+
+@media (max-width: 600px) {
+  .block-thirteen {
+    flex-direction: column !important;
+    align-items: center !important;
+    padding: 20px 0 !important;
+  }
+  .block-thirteen-img {
+    width: 100% !important;
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+  }
+  .block-thirteen-text {
+    width: 100%;
+    padding: 20px 10px;
+  }
+}
