--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -23,3 +23,16 @@ main{
     flex-direction: column;
     gap: 40px;
 }
+
+@media (max-width: 600px) {
+    .main-controls {
+        flex-direction: column;
+        gap: 10px;
+        padding: 10px 10px;
+        font-size: 16px;
+    }
+    main {
+        gap: 20px;
+        padding: 0 5px;
+    }
+}
